# ChangeLog for dev-ml/cmdliner
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ml/cmdliner/ChangeLog,v 1.3 2015/02/09 09:49:22 aballier Exp $

*cmdliner-0.9.7 (09 Feb 2015)

  09 Feb 2015; Alexis Ballier <aballier@gentoo.org> +cmdliner-0.9.7.ebuild:
  version bump

*cmdliner-0.9.6 (28 Nov 2014)

  28 Nov 2014; Alexis Ballier <aballier@gentoo.org> +cmdliner-0.9.6.ebuild:
  version bump

*cmdliner-0.9.5 (29 Oct 2014)

  29 Oct 2014; Alexis Ballier <aballier@gentoo.org> +cmdliner-0.9.5.ebuild,
  +metadata.xml:
  initial import, ebuild by Guillaume Horel in bug #520060 with a few
  modifications by me
