@@ -1,18 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST cmdliner-0.9.5.tbz 47938 SHA256 a0e199c4930450e12edf81604eeceddeeb32d55c43438be689e60df282277a7e SHA512 37d6b417d1b722a03e5bd693a4d9484d3d09574ac2792660caa5fa99b7589acd6da8d14af85e073cc11cb8de6149740538a8ee61f2a730aedec43ed1033454d2 WHIRLPOOL ffcc72fc0bfc4d39e290d3028684f1b20d11d7b630661da62449747040bb93bd65e0451fbdba7037d3a1888e58138beaaa3401ad105b6ac96c66f28c036811ce
-DIST cmdliner-0.9.6.tbz 50182 SHA256 176579b437bb4c1b3c8a8cedbf1909f849a90ca434e7c4173096f232a7f408c4 SHA512 977f81eedf32e60f721155ddc47167019e0570dcbeb3f1777ba378fbfe5689e8c0b711fe5e17485f4fd0cb2a75b041c58a15f8d7e37bb9e06cac14f900a028ec WHIRLPOOL dd17da3c4a899be09a46575f4b92dabb2208e5ebfb541d19dfb9a343cbd7cad9583a2890e2f7c6a5605ec1e4e44c71b62a99cacdd6597264411b0fa737d403a9
 DIST cmdliner-0.9.7.tbz 50343 SHA256 9c19893cffb5d3c3469ee0cce85e3eeeba17d309b33b9ace31aba06f68f0bf7a SHA512 ea1ee186f6072dc836e23a7fcc0756d016c61d4d34ef2416842d1e6e73707b2bbd6aaccd8f57472560dbeab75d3d26159ad8276813882726a11e4530dc6f45e6 WHIRLPOOL 79acdf4807cc5befad01fa1f22a214bc2c6a66dbba4b2b2c041ba72c0b2982d7ca61c632766bfe498987f61d6636a818fae1c96df1bf02e87073c9247b6babf0
-EBUILD cmdliner-0.9.5.ebuild 1097 SHA256 f18fc7d96de3d909c4ce3f06523474ca4099f81676b421616416fc57e132c689 SHA512 2bf1d5d997a043e85a6c02e8cd63db02700a2a247938d81c164a8721313191930b40b4ce88d27a8fc5ceb359b36195774eb88cc519a6e8afe315c4066b258196 WHIRLPOOL 30e1dc1316eb2dc46fe3faccbeb5e18fc479236b1011f988d81381330c0497a6a90c4ae0cbc1e1315166983be682f8a8a5a4f1679c799da046e0a1553daef8b3
-EBUILD cmdliner-0.9.6.ebuild 1097 SHA256 cb1597e182563725e2cc29c8878ec118e43ad2d185957ab82db70449f86b261a SHA512 466db813fff72ecd1515fc2f389ec100c0d63a9818470563f543ce42471c11179a405acd7e062b61ae36e4e60ec108e7fc9e7931b91decd2a63dcb705bc4a6c4 WHIRLPOOL 4bc3e439a3d34f45ae7eb130ca6271b93d912ec214a1bf82b34994eb84a8ef03d3b81c75046b2e60080f90fa4731f59d10d6f444f8cf02bddb8fbe3ed73831af
-EBUILD cmdliner-0.9.7.ebuild 1097 SHA256 b46b42f5a40b9f69506bf7ef870a0bb01550978c0148ec44e10308f5d05f18a9 SHA512 b1ae67fb86601a9d16f28bd728209b3afc8ae62522a8b87a6541b14c13202b31922d0f1e2d2e71bb3a7e06da7a7aa83dc0d5ed1d0c10595fecd6e972d954ff97 WHIRLPOOL 57f4b379ddceb002380739411132d3d57c173ed8965e715dc268c125893f929c5ebc7c11751ccae87696e73633f148077c57a5d89ee881258caa7c53e743d34b
-MISC ChangeLog 668 SHA256 631f906ef889094a2c94bd58dc69f346491b9818f570ba0cef58f7e12b353612 SHA512 f209ca94c629c18164407b6dd59890f1b837a5dff29f5974d7aca753d46e3c553e3654686bc4e0a88a49b2dd8f0b7860c480be6680ec114bafa0aa9f63d47ee1 WHIRLPOOL f5894ebd8355984db8b703390e28301a43c3a2d22ec73f8f981f4c9a678d46d66b88d46a1e7df4a9ce4b6f82061c3850ff2bf9198ca0896c60b64a9b9191380e
+EBUILD cmdliner-0.9.7.ebuild 1094 SHA256 15bb0666ae3c8c94f1fcde5947acfaa9fcddc40571bcad6d0596efeb97d6e5e7 SHA512 a9dc71f2a4dc846788e620b0c3fd8a8e0687707fe8c9214dc686653e3bd30aa4bec6b897eab013514c1d7d7e2529044e005ce55cd30289f82a05119a09a4a50e WHIRLPOOL acd8f34811343560f1c80711269c91f112e1e6546e4f4ef726c59f945059c97fbfcc92c3df056504b748c0a8600dfe26584563b6a63fab6b990af3c747968412
+MISC ChangeLog 900 SHA256 2509a5388e7908fbc5a8b786df0d232070e174d1fbda506966561711fe61e2a4 SHA512 dbb3fc6097fe7c66026caf1e784dcfe4b20baea1276b8e975b7d8c2937453d27c460afda52d69bf25bbdc04d6c950a53ed1ba9f6db8346921f2fd604b4b0d872 WHIRLPOOL 39bd1e7573409dafca334159c2d8969a280d77c9a3e5ede87f4985cbb78ca73670d05cfa3f8d0b4c5671ed9e829e8cc2a31b696872d63de4d3e6c0efc35f8444
 MISC metadata.xml 155 SHA256 118048376ebb76f57628b0819f3de4856e73959c2578c88715d37ea2d1e0af81 SHA512 a525f91dd332fc144c42d1437bdae9c889cbcece6294c2d2f4baf6a532ac2e13492736e75b41c83fac31033a9ae53c37deb96286a5ab8575611136617640952c WHIRLPOOL 71a9c7aaf4e268c65c0d1e30e343911ccbcf99ef8c23773abc2b3af8d58d9f7d5c09632805d8ba9050c09eef629f2b340db9eb9ba8b9cd2e5d655fce3f91fcb6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTYgqMACgkQvFcC4BYPU0p8DgCdF0f+boVAznfAEFu0Z/QXKvJM
-J28AnitBGObdIROOxrjZHgNQrWcAxGrz
-=r83P
+iEYEAREIAAYFAlUdVJwACgkQvFcC4BYPU0op1gCfdtEa+3zKxjhNpUuzLmevr/Tj
+JeEAoMibnzPpnWIGHVFwq9QX7MlMH9a+
+=XOU1
 -----END PGP SIGNATURE-----
