@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile install
-DEPEND=>=dev-lang/ocaml-3.12:=[ocamlopt?] >=dev-ml/findlib-1.0.4-r1
+DEPEND=>=dev-lang/ocaml-4:=[ocamlopt?] >=dev-ml/findlib-1.0.4-r1
 DESCRIPTION=Declarative definition of command line interfaces for OCaml
 EAPI=5
 HOMEPAGE=http://erratique.ch/software/cmdliner
 IUSE=doc +ocamlopt
 KEYWORDS=~amd64
 LICENSE=BSD
-RDEPEND=>=dev-lang/ocaml-3.12:=[ocamlopt?]
+RDEPEND=>=dev-lang/ocaml-4:=[ocamlopt?]
 SLOT=0/0.9.7
 SRC_URI=http://erratique.ch/software/cmdliner/releases/cmdliner-0.9.7.tbz
 _eclasses_=findlib	9cf6020ee5481f39f1aa566a323f9868
-_md5_=18746d70130d608dd0581567f1fa3e54
+_md5_=6fb558ebabc33c429a674650ba73cb68
